# cqfantasy

./: PACKAGE_README.md  README.md  changes.md  example_runner.py  pyproject.toml  stl,corner_ashlarCorner.stl
documentation/: arch.md  documentation.md  door.md  fence.md  fireplace.md  house.md  house_wall.md  tower.md  wall.md  watchtower.md  window.md
example/arch/: arch.py  basic_arch.py  stone_arch.py
example/corner/: ashlar_corner.py
example/door/: arch_door.py  v_door.py
example/fence/: bar_greebled.py  base_brick.py  basic_bar_decoration.py  basic_base.py  basic_fence.py  basic_pillar.py  pillar_brick.py
example/fireplace/: chimney.py  chimney_tiled.py  fire_box.py  fire_box_tiled.py  fire_top.py  fireplace.py  fireplace_tiled.py  hearth.py  hearth_tiled.py  hearth_tiled_two.py
example/house/: WallTudor.py  body.py  body_greebled.py  body_greebled_corner.py  body_types.py  house.py  house_cut_away.py  house_greebled.py  house_greebled_two.py  house_plate.py  pyramid_roof.py  pyramid_roof_shingle.py  roof.py  roof_greebled.py  shingle_roof.py  snowy_roof.py  stucco_brick_body.py  tile_generator.py  tudor_body.py  tudor_split_body.py  tudor_wall.py  wall_stucco_brick_class.py  wall_tudor_class.py  wall_tudor_paneling_class.py
example/house_wall/: log_wall.py  rubble_wall.py  wall_split_class.py  (+3 more)
stl/: arch_arch.stl  arch_basic_arch.stl  arch_stone_arch.stl  door_arch_door.stl  door_v_door.stl  fence_base_brick.stl  fence_basic_bar_decoration.stl  fence_basic_base.stl  fence_basic_fence.stl  fence_basic_pillar.stl  fence_pillar_brick.stl  fireplace.stl  fireplace_chimney.stl  fireplace_chimney_tiled.stl  fireplace_firebox.stl  fireplace_firebox_tiled.stl  fireplace_firetop.stl  fireplace_hearth.stl  fireplace_hearth_tiled.stl  fireplace_hearth_tiled_two.stl  fireplace_tiled.stl  house.stl  house_body.stl  house_body_greebled.stl  house_body_greebled_corner.stl  house_body_stucco_brick.stl  house_body_tudor.stl  house_body_tudor_split.stl  house_body_type.stl  house_cut_away.stl  house_greebled.stl  house_greebled_plate.stl  house_greebled_two_plate.stl  house_log_wall.stl  house_plate.stl  house_pyramid_roof.stl  house_pyramid_roof_shingle.stl  house_roof.stl  house_roof_greebled.stl  house_roof_shingle.stl  (+36 more)
(+122 files in other folders)
